--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+email-validator==1.1.1
 flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
 flask-migrate==2.5.3
 flask-oidc==1.4.0
 flask-sqlalchemy==2.4.4
