--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 flask-migrate==2.5.3
-flask-oidc==1.4.0
 flask-sqlalchemy==2.4.4
 flask-wtf==0.14.3
 gunicorn==20.0.4
 psycopg2==2.8.5
+pytest-flask==1.0.0
 python-dotenv==0.14.0
 pytz==2020.1
