--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ flask-sqlalchemy==2.4.4
 flask-wtf==0.14.3
 gunicorn
 psycopg2==2.8.5
-pytest-flask==1.0.0
+pytest-flask
 python-dotenv==0.14.0
 pytz==2020.1
