--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ Flask-Login==0.5.0
 flask-migrate==2.5.3
 flask-sqlalchemy==2.4.4
 flask-wtf==0.14.3
-gunicorn
+gunicorn==20.0.4
 psycopg2==2.8.5
-pytest-flask
+pytest-flask==1.0.0
 python-dotenv==0.14.0
 pytz==2020.1
